fix: fixed title font size on mobile

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2338,6 +2338,9 @@ img[height] {
   .u-show-lg {
     display: none !important;
   }
+  .title {
+    font-size: 16px;
+  }
 }
 
 @media (min-width: 1200px) {
